updated testNG xml file

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- Added this because of the jenkins error -->
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
 <build>
    
@@ -35,6 +38,7 @@
       </plugins>
   </build>
   
+ 
   
  <dependencies>
     
