--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <!-- Added this because of the jenkins error -->
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
+    
+    
   </properties>
 <build>
    
@@ -23,6 +22,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
+          <!-- Added this because of the jenkins error -->
+          <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
         </plugin>
         
         <plugin>
